# secure-research-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: api.py  app.py  build_index.py  config.py  db.py  embeddings.py  ingest.py  llm.py  prompt.py  retrieval.py  utils.py
frontend/: chat.py  example.env  package-lock.json  package.json
frontend/src/: App.jsx  api.js  config.example.env
frontend/src/components/: AnswerBox.jsx  QueryBox.jsx  Upload.jsx
scripts/: preprocess_docs.sh  start_backend.sh  start_frontend.sh
